[tool.poetry]
name = "dzr_import"
version = "0.1.2"
description = ""
authors = ["speedypleath <gheorgheandrei13@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dzr_import", from = "." },
]

[tool.poetry.dependencies]
python = "^3.9"
pyexiftool = "^0.5.5"
requests = "^2.31.0"
pycryptodome = "^3.18.0"
eyed3 = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dzr_import = "dzr_import:run"